tests/ui/feature-gates/feature-gate-unsized-const-params.stderr
error: `[u8]` is forbidden as the type of a const generic parameter
  --> $DIR/feature-gate-unsized-const-params.rs:1:21
   |
LL | struct Foo<const N: [u8]>;
   |                     ^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |
help: add `#![feature(unsized_const_params)]` to the crate attributes to enable references to implement the `ConstParamTy` trait
   |
LL + #![feature(unsized_const_params)]
   |

error: aborting due to 1 previous error

